<resources>
    <string name="app_name">Focus Flow</string>
    <string name="home">Home</string>
    <string name="calender">Calender</string>
    <string name="add">Add</string>
    <string name="focus">Focus</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="skip">SKIP</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="hi">Hi</string>
    <string name="go_home">Go Home</string>
    <string name="please_select_the_language_of_the_app">Please select the language of the app</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Egestas purus viverra accumsan in nisl nisi Arcu cursus vitae congue mauris rhoncus aenean vel elit scelerisque In egestas erat imperdiet sed euismod nisi porta lorem mollis Morbi tristique senectus et netus Mattis pellentesque id nibh tortor id aliquet lectus proin</string>
    <string name="chose_image">Chose Image</string>
    <string name="name_login">Name</string>
    <string name="what_do_you_want_to_do_today">What do you want to do today?</string>
    <string name="tap_to_add_your_tasks">Tap + to add your tasks</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="description">Description</string>
    <string name="choose_time">Choose Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="choose_category">Choose Category</string>
    <string name="Grocery">Grocery</string>
    <string name="Work">Work</string>
    <string name="Sport">Sport</string>
    <string name="Design">Design</string>
    <string name="University">University</string>
    <string name="Social">Social</string>
    <string name="Music">Music</string>
    <string name="Health">Health</string>
    <string name="Movie">Movie</string>
    <string name="Home">Home</string>
    <string name="Please_enter_title">Please enter title</string>
    <string name="Please_enter_Description">Please enter description</string>
    <string name="search_for_your_task">Search for your task...</string>
    <string name="choose_priority">Choose Priority</string>
    <string name="setting">setting</string>
    <string name="account">Account</string>
    <string name="change_account_name">Change account name</string>
    <string name="change_account_image">Change account Image</string>
    <string name="change_app_language">Change app language</string>
    <string name="uptodo">Uptodo</string>
    <string name="about_us">About US</string>
    <string name="log_out">Log out</string>
    <string name="_0_task_left"> Task Left</string>
    <string name="_0_task_done"> Task Done</string>
    <string name="create_new_category">Create new category</string>
    <string name="category_name">Category name :</string>
    <string name="category_name2">Category name</string>
    <string name="choose_icon_from_library">Choose icon from library</string>
    <string name="category_icon">Category icon :</string>
    <string name="category_color">Category color :</string>
    <string name="create_category">Create Category</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="task_time">Task Time :</string>
    <string name="task_category">Task Category :</string>
    <string name="task_priority">Task Priority :</string>
    <string name="delete_task">Delete Task</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="request_msg"> To send a notification when alarm is triggered allow AlarmManager to send a notification. Tap Settings Permissions, and turn Notifications on.</string>
    <string name="close">Close</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_channel_desc">This is required to send a notification when alarm is set</string>
    <string name="please_select_the_fliter">Please select the fliter</string>
    <string name="have_a_good_night">Have a good night</string>
    <string name="it_s_time_to_wake_up">It’s time to wake up</string>
    <string name="_08_00_am">08:00 AM</string>
    <string name="_10_00_pm">10:00 PM</string>
    <string name="none">none</string>
    <string name="default1">Default</string>
    <string name="all">All</string>
    <string name="create_task">Create Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="make_your_time_valuable">Make your time valuable!</string>
    <string name="first_description_page">Time management means doing the right things at the right time.</string>
    <string name="every_task_is_a_step_closer_to_success">Make a list, everything is under control!</string>
    <string name="secound_des_page">Complete tasks in order of priority and feel the progress.</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
        <string name="about_us_page">About Us</string>
        <string name="contact_us">Contact Us</string>
        <string name="setting2">Setting</string>
        <string name="get_a_complete_view_of_your_work_by_adding_tasks">Get a complete view of your work by adding tasks.</string>
    <string name="about_us_para">Life\'s busy, and keeping up with everything can be tough. That\'s why we created Focus Flow. We\'re here to help you stay organized, crush your goals, and get more done. Focus Flow is simple to use and packed with features that help you stay focused and make the most of your time. Our team is passionate about making life easier for you. We believe that planning ahead is the key to a happier, more productive life.</string>
    <string name="change">Change</string>
    <string name="done">Done</string>
    <string name="undone">Undone</string>
    <string name="date">Date</string>
    <string name="priority">Priority</string>
    <string name="category">Category</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="exit">Exit</string>

</resources>