<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_dark"
        tools:context=".peresentaion.ui.CreateCategoryFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/create_new_category"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/vazir_light"
            android:text="@string/category_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/materialTextView7"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView7" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:boxStrokeColor="@color/purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/vazir_medium"
                android:textColor="@color/white"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView81"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/vazir_light"
            android:text="@string/category_icon"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/materialTextView7"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/gray_light"
            android:fontFamily="@font/vazir_light"
            android:padding="12dp"
            android:text="@string/choose_icon_from_library"
            android:textColor="@color/white"
            app:cornerRadius="4dp"
            app:layout_constraintStart_toStartOf="@+id/materialTextView81"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView81" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView82"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/vazir_light"
            android:text="@string/category_color"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/materialTextView7"
            app:layout_constraintTop_toBottomOf="@+id/materialButton3" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/materialTextView82"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView82"
            tools:listitem="@layout/item_color" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_back_second_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/vazir_medium"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textColor="@color/purple"
            app:layout_constraintBottom_toBottomOf="@+id/btn_second_first_page"
            app:layout_constraintEnd_toStartOf="@+id/btn_second_first_page"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_second_first_page" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_second_first_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir_medium"
            android:text="@string/create_category"
            app:backgroundTint="@color/purple"
            app:cornerRadius="4dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_back_second_page" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
