<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_dark"
    tools:context=".peresentaion.ui.intro.SecondIntroFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/frame_161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/vazir_medium"
        android:text="@string/lorem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_back_second_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/vazir_medium"
        android:text="@string/back"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_second_first_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_second_first_page" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_second_first_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/next"
        android:fontFamily="@font/vazir_medium"
        app:backgroundTint="@color/purple"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
