<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_dark"
        tools:context=".peresentaion.ui.profile.ProfileFragment">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/vazir_bold"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_name_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir_medium"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            android:text="@string/name_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_left_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_light"
            app:cornerRadius="4dp"
            android:fontFamily="@font/vazir_light"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_done_task"
            app:layout_constraintEnd_toStartOf="@+id/tv_done_task"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/_0_task_left" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_done_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_light"
            android:layout_marginTop="18dp"
            app:cornerRadius="4dp"
            android:fontFamily="@font/vazir_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_left_task"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name_profile"
            android:text="@string/_0_task_done" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_done_task" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
